# OpenCV_Beroepsproduct

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  batch.txt  batch_english.txt  main.cpp
docs/: index.md  todo.md
include/: application.h  batch_parser.h  colour.h  colour_filter.h  colour_range.h  coloured_shape_finder.h  detailed_shape.h  detection.h  drawer.h  language.h  parser.h  printer.h  shape.h  shape_filter.h  specification.h
src/: application.cpp  batch_parser.cpp  colour_filter.cpp  coloured_shape_finder.cpp  detailed_shape.cpp  detection.cpp  drawer.cpp  language.cpp  parser.cpp  printer.cpp  shape_filter.cpp  specification.cpp
